# p5.esp32.rswc

./: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
components/p5_rswc/: CMakeLists.txt  Kconfig.projbuild
components/p5_rswc/cmake/: p5.esp32.rwsc.namespace.cmake  p5.esp32.rwsc.recursive_sources.cmake  p5.esp32.rwsc.sdkconfig_test.cmake  p5.rwsc.romfs.cmake
components/p5_rswc/implementation/: CMakeLists.txt
components/p5_rswc/implementation/common/: CMakeLists.txt
components/p5_rswc/implementation/common/include/p5/rswc/implementation_/: common.hpp
components/p5_rswc/implementation/common/include/p5/rswc/implementation_/common/: coro.hpp  exception_handling.hpp  notifier.hpp  sdk.hpp  utils.hpp
components/p5_rswc/implementation/common/include/p5/rswc/implementation_/common/coro/: future.hpp  private_.hpp  task.hpp
components/p5_rswc/implementation/common/include/p5/rswc/implementation_/common/notifier/: fwd.hpp
components/p5_rswc/implementation/common/src/: common.coro.cxx  common.cxx  common.exception_handling.cxx  common.notifier.cxx  common.sdk.cxx  common.utils.cxx
components/p5_rswc/implementation/dirty/: CMakeLists.txt
components/p5_rswc/implementation/dirty/include/p5/rswc/implementation_/: dirty.hpp
components/p5_rswc/implementation/dirty/src/: dirty.cxx
components/p5_rswc/implementation/log/: CMakeLists.txt
components/p5_rswc/implementation/log/include/p5/rswc/implementation_/: log.hpp
components/p5_rswc/implementation/log/src/: log.cxx
components/p5_rswc/implementation/main/: CMakeLists.txt
components/p5_rswc/implementation/main/include/p5/rswc/: implementation.hpp
components/p5_rswc/implementation/main/src/: event_loop.cxx  event_loop.hpp  implementation.cxx  logged_action.cxx  logged_action.hpp  main_task.cxx  main_task.hpp  nvs_flash_keys.cxx  nvs_flash_keys.hpp
components/p5_rswc/implementation/platform/: CMakeLists.txt
components/p5_rswc/implementation/platform/include/p5/rswc/implementation_/: platform.fwd.hpp  platform.hpp
components/p5_rswc/implementation/platform/include/p5/rswc/implementation_/platform/: class.fwd.hpp  class.hpp  logged_action.hpp  module.fwd.hpp  module.hpp
components/p5_rswc/implementation/platform/include/p5/rswc/implementation_/platform/module/: interface.fwd.hpp  interface.hpp
components/p5_rswc/implementation/platform/modules/: CMakeLists.txt
components/p5_rswc/implementation/platform/modules/event_loop/: CMakeLists.txt
components/p5_rswc/implementation/platform/modules/event_loop/include/p5/rswc/implementation_/platform/modules/: event_loop.fwd.hpp  event_loop.hpp
components/p5_rswc/implementation/platform/modules/event_loop/src/: event_loop.cxx
components/p5_rswc/implementation/platform/modules/romfs/: CMakeLists.txt
components/p5_rswc/implementation/platform/modules/romfs/include/p5/rswc/implementation_/platform/modules/: romfs.fwd.hpp  romfs.hpp
components/p5_rswc/implementation/platform/modules/romfs/src/: romfs.cxx
components/p5_rswc/implementation/platform/src/: platform.class.cxx  platform.cxx  platform.logged_action.cxx  platform.module.cxx
components/p5_rswc/implementation/romfs/: CMakeLists.txt
components/p5_rswc/implementation/romfs/include/p5/rswc/implementation_/: romfs.hpp
components/p5_rswc/implementation/romfs/src/: romfs.cxx
components/p5_rswc/include/: p5_rswc.h
components/p5_rswc/scripts/: make_image_layout.py  make_image_manifest_line.py
components/p5_rswc/src/: p5_rswc.cxx
main/: CMakeLists.txt
main/src/: main.c
